# Raytracer

./: .gitignore  CMakeLists.txt  Doxyfile  Readme.md  build.sh
include/: Color.hpp  File.hpp  Vector.hpp
include/Core/: Core.hpp
include/Materials/: Dielectric.hpp  Lambertian.hpp  Material.hpp  Metal.hpp
include/Math/: Constants.hpp  Interval.hpp  Random.hpp  Utils.hpp
include/Primitive/: HitRecord.hpp  IPrimitive.hpp  Sphere.hpp  World.hpp
include/Raytracer/: Camera.hpp  Ray.hpp
src/: File.cpp  main.cpp
src/Core/: Core.cpp
src/Materials/: Dielectric.cpp  Lambertian.cpp  Material.cpp  Metal.cpp
src/Math/: Interval.cpp  Random.cpp  Utils.cpp  Vector3D.cpp
src/Primitive/: HitRecord.cpp  Sphere.cpp  World.cpp
src/Raytracer/: Camera.cpp  Ray.cpp
test/: main_output_ball+glass+mirror.cpp
